<resources>
    <string name="app_name">AboutME</string>
    <string name="name">Mounika</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">Iam Mounika.
    \n\nI love fish.
    \n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
    \nFun Fact is that I have several aquariums and also a river.
    \nI like eating fish, too. Raw fish, Grilled fish, Smoked fish, Poached fish - not to much.
    \nAnd sometimes I even go fishing.
    \nAnd even less sometimes, I actually catch something.
    \n\nOnce, When I was camping in Cananda, and very hungry,I even caught a large salmon with my hands.
    \n\nI\'ll be happy to teach you how to make your own aquarium.
    \nYou shoukd ask someone else about fishing, though.</string>
    <string name="some_long_text">IAm a text view in linear Layout, which is Scroll View, which itself in Linear Layout</string>
    <string name="what_is_your_nickname">What is your nick name?</string>
    <string name="done_button">Done</string>
</resources>
